<resources>
    <string name="app_name">Homework2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_screen">"Профиль"</string>
    <string name="main_screen">"Главная"</string>
    <string name="settings_screen">"Настройки"</string>
    <string name="friends_screen">"Друзья"</string>
    <string name="games_screen">"Игры"</string>
    <string name="send">Send</string>
</resources>